--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -66,5 +66,10 @@
             <Label fx:id="errorPasswordLoginInput" layoutX="53.0" layoutY="331.0" prefHeight="18.0" prefWidth="303.0" textFill="RED" />
          </children>
       </AnchorPane>
+        <Label fx:id="messageLabel" layoutX="223.0" layoutY="-7.0" opacity="0.0" prefHeight="41.0" prefWidth="645.0" style="-fx-background-color: #ff7f7f; -fx-background-radius: 10; -fx-alignment: center;" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </Label>
     </children>
 </AnchorPane>
