--- a/src/main/resources/com/example/sacms/clubInchargeScreenClubAdvisor.fxml
+++ b/src/main/resources/com/example/sacms/clubInchargeScreenClubAdvisor.fxml
@@ -13,24 +13,23 @@
 
 <AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
-      <Button layoutX="510.0" layoutY="134.0" mnemonicParsing="false" onAction="#onHideClubsViewStudentsAndTeachersOptionClicked" opacity="0.0" prefHeight="76.0" prefWidth="210.0" text="Button" />
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/Logo.png" />
             </image>
         </ImageView>
-        <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardStudentsAndTeachersScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
-        <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewStudentsAndTeacherScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+        <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
+        <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewClubAdvisorScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
             <font>
                 <Font name="Noto Sans Bold" size="22.0" />
             </font>
         </Button>
-        <Button fx:id="eventScreenButton" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewStudentsAndTeacherScreenButtonClicked" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
+        <Button fx:id="eventScreenButton" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
             <font>
                 <Font name="Noto Sans Regular" size="22.0" />
             </font>
         </Button>
-        <Button fx:id="reportsScreenButton" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onReportsStudentAndTeacherScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
+        <Button fx:id="reportsScreenButton" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onReportsScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
             <font>
                 <Font name="Noto Sans Regular" size="22.0" />
             </font>
@@ -58,48 +57,22 @@
             </children>
         </AnchorPane>
         <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
-        <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="286.0" text="List of Clubs">
+        <Label layoutX="44.0" layoutY="125.0" prefHeight="62.0" prefWidth="374.0" text="Club Incharge List">
             <font>
                 <Font name="System Bold" size="42.0" />
             </font>
         </Label>
-      <TableView fx:id="clubsViewTable" layoutX="27.0" layoutY="227.0" prefHeight="371.0" prefWidth="688.0">
+      <TableView fx:id="clubAdvisorTable" layoutX="44.0" layoutY="233.0" prefHeight="371.0" prefWidth="939.0">
          <columns>
-            <TableColumn fx:id="clubIDColumnClubTable" prefWidth="89.0" text="Club ID" />
-            <TableColumn fx:id="clubNameColumnClubTable" prefWidth="177.0" text="Club Name" />
-            <TableColumn fx:id="clubDescriptionColumnClubTable" prefWidth="291.0" text="Club Description" />
-            <TableColumn fx:id="teacherInchargeColumnClubTable" prefWidth="126.0" text="Teacher In charge" />
+            <TableColumn fx:id="clubAdvisorIDColumnClubAdvisorTable" prefWidth="105.0" text="Club Advisor ID" />
+            <TableColumn fx:id="clubNameColumnClubAdvisorTable" prefWidth="183.0" text="Club Name" />
+            <TableColumn fx:id="studentIDColumnClubAdvisorTable" prefWidth="125.0" text="Student ID" />
+            <TableColumn fx:id="nameColumnClubAdvisorTable" prefWidth="126.0" text="Name" />
+            <TableColumn fx:id="contactNoColumnClubAdvisorTable" prefWidth="132.0" text="Contact No" />
+            <TableColumn fx:id="positionColumnClubAdvisorTable" prefWidth="123.0" text="Position" />
+            <TableColumn fx:id="emailColumnClubAdvisorTable" prefWidth="136.0" text="Email" />
          </columns>
       </TableView>
-      <Button layoutX="514.0" layoutY="142.0" mnemonicParsing="false" onAction="#onJoinClubsViewOptionClicked" prefHeight="29.0" prefWidth="96.0" style="-fx-background-color: #55CB68; -fx-background-radius: 15;" text="JOIN" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="619.0" layoutY="142.0" mnemonicParsing="false" onAction="#onLeaveClubsViewOptionClicked" prefHeight="29.0" prefWidth="96.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="LEAVE" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-      <AnchorPane fx:id="joinClubsPane" layoutX="757.0" layoutY="315.0" opacity="0.0" prefHeight="167.0" prefWidth="221.0">
-         <children>
-            <TextField fx:id="clubIDInputJoinClubsStudetnsAndTeachers" layoutY="14.0" prefHeight="44.0" prefWidth="221.0" promptText="    Enter the Club ID" style="-fx-background-radius: 10;">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </TextField>
-            <Button layoutX="39.0" layoutY="91.0" mnemonicParsing="false" onAction="#onJoinClubClicked" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #55CB68; -fx-background-radius: 15;" text="JOIN" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
-            <Label fx:id="errorJoinClubsLabel" layoutX="29.0" layoutY="58.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="leaveClubsPane" layoutX="753.0" layoutY="482.0" opacity="0.0" prefHeight="167.0" prefWidth="229.0">
          <children>
             <Button layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#onLeaveClubClicked" prefHeight="44.0" prefWidth="143.0" style="-fx-background-color: #FB6F6F; -fx-background-radius: 15;" text="LEAVE" textFill="WHITE">
@@ -119,21 +92,16 @@
             </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="27.0" layoutY="182.0" prefHeight="31.0" prefWidth="280.0" text="Do you want to Join/ Leave a club?">
+      <Label layoutX="44.0" layoutY="187.0" prefHeight="31.0" prefWidth="315.0" text="Details about the club representatives">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="refreshClubsViewButton" layoutX="30.0" layoutY="252.0" mnemonicParsing="false" onAction="#onRefreshClubsViewButtonClicked" prefHeight="333.0" prefWidth="682.0" style="-fx-background-color: white;" text="Refresh Clubs">
+      <Button fx:id="refreshClubsInchargeList" layoutX="69.0" layoutY="262.0" mnemonicParsing="false" onAction="#onRefreshClubsInchargeListClicked" prefHeight="333.0" prefWidth="862.0" style="-fx-background-color: white;" text="Refresh">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Button>
-      <TextField fx:id="studentIdInputClubsScreen" layoutX="781.0" layoutY="227.0" prefHeight="44.0" prefWidth="174.0" promptText=" Enter your ID" style="-fx-background-radius: 10; -fx-border-radius: 11;">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </TextField>
       <Label fx:id="errorStudentIdInputClubsScreen" layoutX="786.0" layoutY="271.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
          <font>
             <Font size="15.0" />
@@ -144,10 +112,5 @@
                 <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-      <Button layoutX="176.0" layoutY="610.0" mnemonicParsing="false" onAction="#onLoadClubInchargeListStudentsAndTeachers" prefHeight="39.0" prefWidth="390.0" style="-fx-background-color: white;" text="Want to contact the club incharge? Click here">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
     </children>
 </AnchorPane>
