--- a/src/main/resources/com/example/sacms/clubsViewClubAdvisor.fxml
+++ b/src/main/resources/com/example/sacms/clubsViewClubAdvisor.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -102,7 +107,7 @@
                   <Font size="20.0" />
                </font>
             </TextField>
-            <Label fx:id="errorDeleteClubsLabel" layoutX="32.0" layoutY="74.0" prefHeight="31.0" prefWidth="163.0" textAlignment="CENTER" textFill="RED">
+            <Label fx:id="errorDeleteClubsLabel" layoutX="32.0" layoutY="74.0" prefHeight="31.0" prefWidth="205.0" textAlignment="CENTER" textFill="RED">
                <font>
                   <Font size="15.0" />
                </font>
@@ -119,5 +124,10 @@
                 <Font size="15.0" />
             </font>
         </Button>
+      <Label fx:id="errorClubAdvisorIDInputClubsScreen" layoutX="833.0" layoutY="283.0" prefHeight="31.0" prefWidth="206.0" textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
