--- a/src/main/resources/com/example/sacms/eventCreation.fxml
+++ b/src/main/resources/com/example/sacms/eventCreation.fxml
@@ -66,7 +66,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="377.0" layoutY="196.0" text="Enter event date">
+      <Label layoutX="408.0" layoutY="196.0" text="Enter event date">
          <font>
             <Font name="Noto Sans Regular" size="20.0" />
          </font>
@@ -76,7 +76,7 @@
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="eventDateEventCreationInput" layoutX="377.0" layoutY="228.0" prefHeight="43.0" prefWidth="206.0" promptText="YYYY-MM-DD" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventDateEventCreationInput" layoutX="408.0" layoutY="228.0" prefHeight="43.0" prefWidth="206.0" promptText="YYYY-MM-DD" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -86,37 +86,37 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="eventTimeEventCreationInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="249.0" promptText="HH:MM" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventTimeEventCreationInput" layoutX="28.0" layoutY="324.0" prefHeight="44.0" prefWidth="159.0" promptText="HH:MM" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <Label layoutX="304.0" layoutY="292.0" prefHeight="32.0" prefWidth="206.0" text="Club Organsier ID">
+      <Label layoutX="216.0" layoutY="292.0" prefHeight="32.0" prefWidth="206.0" text="Organising Club ID">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="clubIDEventCreationInput" layoutX="304.0" layoutY="324.0" prefHeight="43.0" prefWidth="278.0" promptText="ClubID" style="-fx-background-radius: 10;">
+      <TextField fx:id="clubIDEventCreationInput" layoutX="216.0" layoutY="324.0" prefHeight="44.0" prefWidth="178.0" promptText="ClubID" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <Label layoutX="28.0" layoutY="392.0" text="Enter event description">
+      <Label layoutX="28.0" layoutY="415.0" text="Enter event description">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <ImageView fitHeight="381.0" fitWidth="262.0" layoutX="673.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="394.0" fitWidth="309.0" layoutX="679.0" layoutY="218.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/EventCreationPic.png" />
          </image>
       </ImageView>
-      <Button layoutX="347.0" layoutY="556.0" mnemonicParsing="false" onAction="#onScheduleEventButtonTwoClicked" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="SCHEDULE" textFill="WHITE">
+      <Button layoutX="377.0" layoutY="578.0" mnemonicParsing="false" onAction="#onScheduleEventButtonTwoClicked" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="SCHEDULE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <TextArea fx:id="eventDescriptionEventCreationInput" layoutX="28.0" layoutY="424.0" prefHeight="97.0" prefWidth="554.0" promptText="Explain about the event/meeting or activity">
+      <TextArea fx:id="eventDescriptionEventCreationInput" layoutX="28.0" layoutY="447.0" prefHeight="97.0" prefWidth="581.0" promptText="Explain about the event/meeting or activity">
          <font>
             <Font size="20.0" />
          </font></TextArea>
@@ -130,17 +130,17 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorEventTimeEventCreationInput" layoutX="28.0" layoutY="367.0" prefHeight="20.0" prefWidth="250.0" textFill="#ff0900">
+      <Label fx:id="errorEventTimeEventCreationInput" layoutX="28.0" layoutY="367.0" prefHeight="41.0" prefWidth="159.0" textFill="#ff0900" wrapText="true">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorClubIDEventCreationInput" layoutX="305.0" layoutY="367.0" prefHeight="20.0" prefWidth="278.0" textFill="#ff0900">
+      <Label fx:id="errorClubIDEventCreationInput" layoutX="216.0" layoutY="369.0" prefHeight="41.0" prefWidth="178.0" textFill="#ff0900" wrapText="true">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorEventDescriptionEventCreationInput" layoutX="27.0" layoutY="522.0" prefHeight="20.0" prefWidth="458.0" textFill="#ff0900">
+      <Label fx:id="errorEventDescriptionEventCreationInput" layoutX="27.0" layoutY="545.0" prefHeight="20.0" prefWidth="458.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
@@ -148,6 +148,21 @@
       <Label fx:id="messageLabel" layoutX="223.0" layoutY="-7.0" opacity="0.0" prefHeight="41.0" prefWidth="645.0" style="-fx-background-color: #ff7f7f; -fx-background-radius: 10; -fx-alignment: center;" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="433.0" layoutY="292.0" prefHeight="32.0" prefWidth="206.0" text="Enter Location">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <TextField fx:id="locationEventCreationInput" layoutX="433.0" layoutY="324.0" prefHeight="44.0" prefWidth="178.0" promptText="Location" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label fx:id="errorLocationEventCreationInput" layoutX="436.0" layoutY="369.0" prefHeight="41.0" prefWidth="178.0" textFill="#ff0900" wrapText="true">
+         <font>
+            <Font size="14.0" />
          </font>
       </Label>
    </children>
