--- a/src/main/resources/com/example/sacms/editEventScreen.fxml
+++ b/src/main/resources/com/example/sacms/editEventScreen.fxml
@@ -20,7 +20,7 @@
       <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
       <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewClubAdvisorScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
          <font>
-            <Font name="Noto Sans " size="22.0" />
+            <Font name="Noto Sans Regular" size="22.0" />
          </font>
       </Button>
       <Button fx:id="eventScreenButton" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
@@ -61,86 +61,86 @@
             <Font name="System Bold" size="42.0" />
          </font>
       </Label>
-      <Label layoutX="28.0" layoutY="196.0" text="Enter event name">
+      <Label layoutX="188.0" layoutY="218.0" text="Enter event name">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="377.0" layoutY="196.0" text="Enter event date">
+      <Label layoutX="459.0" layoutY="218.0" text="Enter event date">
          <font>
             <Font name="Noto Sans Regular" size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="eventNameEditEventInput" layoutX="28.0" layoutY="228.0" prefHeight="43.0" prefWidth="320.0" promptText="Name" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventNameEditEventInput" layoutX="188.0" layoutY="250.0" prefHeight="44.0" prefWidth="250.0" promptText="Name" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="eventDateEditEventInput" layoutX="377.0" layoutY="228.0" prefHeight="43.0" prefWidth="206.0" promptText="YYYY-MM-DD" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventDateEditEventInput" layoutX="459.0" layoutY="250.0" prefHeight="44.0" prefWidth="170.0" promptText="YYYY-MM-DD" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <Label layoutX="28.0" layoutY="292.0" text="Enter event time">
+      <Label layoutX="29.0" layoutY="325.0" text="Enter event time">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="eventTimeEditEventInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="249.0" promptText="HH:MM" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventTimeEditEventInput" layoutX="29.0" layoutY="357.0" prefHeight="44.0" prefWidth="159.0" promptText="HH:MM" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <Label layoutX="304.0" layoutY="292.0" text="Event ID">
+      <Label layoutX="29.0" layoutY="219.0" text="Event ID">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="eventIDEditEventInput" layoutX="304.0" layoutY="324.0" prefHeight="43.0" prefWidth="278.0" promptText="EventID" style="-fx-background-radius: 10;">
+      <TextField fx:id="eventIDEditEventInput" layoutX="29.0" layoutY="251.0" prefHeight="44.0" prefWidth="126.0" promptText="EventID" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <Label layoutX="28.0" layoutY="392.0" text="Enter event description">
+      <Label layoutX="29.0" layoutY="422.0" text="Enter event description">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <ImageView fitHeight="381.0" fitWidth="262.0" layoutX="673.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="371.0" fitWidth="291.0" layoutX="703.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/EventEditScreenPic.png" />
          </image>
       </ImageView>
-      <Button layoutX="347.0" layoutY="556.0" mnemonicParsing="false" onAction="#onUpdateEventButtonClicked" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="UPDATE" textFill="WHITE">
+      <Button layoutX="440.0" layoutY="585.0" mnemonicParsing="false" onAction="#onUpdateEventButtonClicked" prefHeight="44.0" prefWidth="190.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="UPDATE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <TextArea fx:id="eventDescriptionEditEventInput" layoutX="28.0" layoutY="424.0" prefHeight="97.0" prefWidth="554.0" promptText="Explain about the event/meeting or activity">
+      <TextArea fx:id="eventDescriptionEditEventInput" layoutX="29.0" layoutY="454.0" prefHeight="97.0" prefWidth="599.0" promptText="Explain about the event/meeting or activity">
          <font>
             <Font size="20.0" />
          </font></TextArea>
-      <Label fx:id="errorEventNameEditEventInput" layoutX="28.0" layoutY="271.0" prefHeight="18.0" prefWidth="298.0" textFill="#ff0900">
+      <Label fx:id="errorEventNameEditEventInput" layoutX="188.0" layoutY="293.0" prefHeight="20.0" prefWidth="250.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorEventDateEditEventInput" layoutX="377.0" layoutY="271.0" prefHeight="20.0" prefWidth="206.0" textFill="#ff0900">
+      <Label fx:id="errorEventDateEditEventInput" layoutX="459.0" layoutY="293.0" prefHeight="20.0" prefWidth="170.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorEventTimeEditEventInput" layoutX="28.0" layoutY="367.0" prefHeight="20.0" prefWidth="250.0" textFill="#ff0900">
+      <Label fx:id="errorEventTimeEditEventInput" layoutX="29.0" layoutY="400.0" prefHeight="20.0" prefWidth="159.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorEventIDEditEventInput" layoutX="305.0" layoutY="367.0" prefHeight="20.0" prefWidth="278.0" textFill="#ff0900">
+      <Label fx:id="errorEventIDEditEventInput" layoutX="30.0" layoutY="294.0" prefHeight="32.0" prefWidth="126.0" textFill="#ff0900" wrapText="true">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorEventDescriptionEditEventInput" layoutX="27.0" layoutY="522.0" prefHeight="20.0" prefWidth="458.0" textFill="#ff0900">
+      <Label fx:id="errorEventDescriptionEditEventInput" layoutX="28.0" layoutY="552.0" prefHeight="20.0" prefWidth="458.0" textFill="#ff0900">
          <font>
             <Font size="14.0" />
          </font>
@@ -148,6 +148,36 @@
       <Label fx:id="messageLabel" layoutX="223.0" layoutY="-7.0" opacity="0.0" prefHeight="41.0" prefWidth="645.0" style="-fx-background-color: #ff7f7f; -fx-background-radius: 10; -fx-alignment: center;" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="446.0" layoutY="325.0" prefHeight="32.0" prefWidth="206.0" text="Enter Location">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <TextField fx:id="locationEventEditInput" layoutX="446.0" layoutY="357.0" prefHeight="44.0" prefWidth="178.0" promptText="Location" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label fx:id="errorLocationEventEditInput" layoutX="449.0" layoutY="402.0" prefHeight="20.0" prefWidth="178.0" textFill="#ff0900" wrapText="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="223.0" layoutY="325.0" text="Organising Club ID">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <TextField fx:id="clubIDEditEventInput" layoutX="223.0" layoutY="357.0" prefHeight="44.0" prefWidth="196.0" promptText="ClubID" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <Label fx:id="errorClubIDEditEventInput" layoutX="226.0" layoutY="402.0" prefHeight="20.0" prefWidth="190.0" textFill="#ff0900" wrapText="true">
+         <font>
+            <Font size="14.0" />
          </font>
       </Label>
    </children>
