--- a/src/main/resources/com/example/sacms/reportsClubAdvisorView.fxml
+++ b/src/main/resources/com/example/sacms/reportsClubAdvisorView.fxml
@@ -63,18 +63,18 @@
                 <Font name="System Bold" size="42.0" />
             </font>
         </Label>
-        <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="DOWNLOAD" textFill="WHITE">
+        <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onDownloadReportClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="DOWNLOAD" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
         </Button>
-        <TableView layoutX="28.0" layoutY="229.0" prefHeight="422.0" prefWidth="997.0">
+        <TableView fx:id="reportsTable" layoutX="28.0" layoutY="229.0" prefHeight="422.0" prefWidth="997.0">
             <columns>
-                <TableColumn prefWidth="217.0" text="Club Name" />
-                <TableColumn prefWidth="186.0" text="Number of Club Members" />
-                <TableColumn prefWidth="192.0" text="Number of Club Events Held" />
-                <TableColumn prefWidth="237.0" text="Recent Event" />
-                <TableColumn prefWidth="164.0" text="Recent Event Attendance" />
+                <TableColumn fx:id="clubNameReportColumn" prefWidth="217.0" text="Club Name" />
+                <TableColumn fx:id="NoOfClubMembersColumn" prefWidth="186.0" text="Number of Club Members" />
+                <TableColumn fx:id="NoOfClubEventsHeldColumn" prefWidth="192.0" text="Number of Club Events Held" />
+                <TableColumn fx:id="recentEventNameColumn" prefWidth="237.0" text="Recent Event" />
+                <TableColumn fx:id="recentEventAttendance" prefWidth="157.0" text="Recent Event Attendance" />
             </columns>
         </TableView>
       <Button fx:id="refreshReportViewButton" layoutX="200.0" layoutY="272.0" mnemonicParsing="false" onAction="#onRefreshReportsViewButtonClicked" prefHeight="346.0" prefWidth="682.0" style="-fx-background-color: white;" text="Refresh Clubs">
