--- a/src/main/resources/com/example/sacms/reportsViewStudentAndTeachers.fxml
+++ b/src/main/resources/com/example/sacms/reportsViewStudentAndTeachers.fxml
@@ -58,7 +58,7 @@
         <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
         <Button fx:id="homeScreenButton" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardStudentsAndTeachersScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
         <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" onAction="#onUserIconButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="74.0" />
-        <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="352.0" text="Monthly Report">
+        <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="352.0" text="View Report">
             <font>
                 <Font name="System Bold" size="42.0" />
             </font>
